# sfml-boilerplate

./: .gitignore  CMakeLists.txt
include/: boilerplate.h
srcs/: main.cpp
